@@ -4,6 +4,9 @@ Changelog
 2.0.5 - unreleased
 ------------------
 
+- Fix the CheckBoxWidget to work properly with required fields and
+  return an error that was previously squashed. Added missing unit tests
+  for widget. This should also fix #11449. [rochecompaan]
 
 2.0.4 - 2011-10-06
 ------------------
